--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,9 @@ h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
 idna==3.7
-Levenshtein==0.20.7
 pycparser==2.21
 python-dotenv
-python-Levenshtein==0.20.7
+rapidfuzz
 python-telegram-bot==20.0a2
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
